K1J-355: Upgrade to java 21 and gradle 8.10.2. Fix compilation errors and broken tests