@@ -26,7 +26,7 @@ import se.inera.intyg.common.pdf.renderer.UVRenderer;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 import se.inera.intyg.common.pdf.renderer.UVRenderer;
 
 /**
